# covid19-api

./: .gitignore  README.md  interactive.py  main.py  populations.csv  pyproject.toml  requirements.txt
.github/workflows/: main.yaml  test.yaml
covid19_countries/: api.py  utils.py
covid19_countries/etl/: csse_data_etl.py
covid19_countries/etl/tested_data/: __init__.py
tests/: test_covid19_countries.py  test_utils.py
website/: index.html  package-lock.json  package.json
website/css/: app.css
website/scss/: _layout_header.scss  _settings.scss  app.scss
