[tool.poetry]
name = "covid19-countries"
version = "0.1.0"
description = ""
authors = ["Pascal Brokmeier <accounts@pascalbrokmeier.de>"]

[tool.poetry.dependencies]
python = "^3.8"
flask-api = "^2.0"
pandas = "^1.0.1"
black = "^19.10b0"
joblib = "^0.14.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
